# DonkeyIsland

./: CMakeLists.txt  README.md  thirdsemestergame.kdev4  thirdsemestergame.sln
.kdev4/: thirdsemestergame.kdev4
Debug/: vc140.idb
Debug/thirdsem.DE8D40AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  thirdsemestergame.lastbuildstate
temp/x64-Debug-Dll/: vc140.idb
temp/x64-Debug-Dll/tinyxml2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tinyxml2.lastbuildstate  tinyxml2.write.1u.tlog
thirdsemestergame/: Inventory.cpp  Inventory.h  Quests.cpp  Quests.h  brick.h  flower.cpp  flower.h  gamescene.cpp  gamescene.h  house.cpp  house.h  lake_grass.cpp  lake_grass.h  main.cpp  main.h  quests.xml  resource.h  thirdsemestergame.aps  thirdsemestergame.rc  thirdsemestergame.vcxproj  thirdsemestergame.vcxproj.filters
thirdsemestergame/.kdev4/: thirdsemestergame.kdev4
thirdsemestergame/tinyxml2/: test.cpp  tinyxml2.vcxproj  tinyxml2.vcxproj.filters
thirdsemestergame/tinyxml2/temp/Win32-Debug-Dll/: vc140.idb
thirdsemestergame/tinyxml2/temp/Win32-Debug-Dll/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
thirdsemestergame/tinyxml2/temp/Win32-Debug-Dll/tinyxml2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tinyxml2.lastbuildstate  tinyxml2.write.1u.tlog
thirdsemestergame/tinyxml2/temp/x64-Debug-Dll/: vc140.idb
x64/Debug/: thirdsemestergame.ilk
(+8 files in other folders)
